TEST_PROGRAMS/INVALID/jonathan_campbell/1.min
var x: int;

x = x / x;
1 = x;
print x;
